@@ -1,3 +1,10 @@
+2022-02-27  TANAKA Takuji  <ttk@t-lab.opal.ne.jp>
+
+	* dvipdfmx-upjf.test, Makefile.{am,in},
+	tests/Makefile_upjf,
+	tests/upjf-g00.{opl,ofm}, tests/upjv-g00.{opl,ofm}:
+	Add a new test for pTeX & OFM FONTDIR.
+
 2022-02-24  TANAKA Takuji  <ttk@t-lab.opal.ne.jp>
 
 	* dvipdfmx-upjf.test, Makefile.{am,in},
